1.1.3     _/__/21
    New Features:
        - Added a debug level 5 for messages that are extremely common will rarely be used for debugging (like a message saying a single block has been loaded)
        - Added the command  "/woz get [item id]"  which gives a player the item specified in the  "item"  section of the custom block's definition
            - The new permission  "worldofzombies.command.get"  has been added for this command
            - This command includes dynamic tab completion based on the active custom blocks from the most recent plugin reload
            - If the item doesn't have the required custom block NBT tags, they will be added to the item automatically
        - Added the command  "/woz item nbt (-yaml)"  which sends the player the NBT API string for the item in their main hand
            - The new permission  "worldofzombies.command.item"  has been added for this command
            - The optional flag  "-yaml"  will format the string to start and end with a single quote and escapes the internal single quotes
                - This flag is intended to be used so the returned string can be pasted directly into a yaml file
        - Added support for custom blocks that use BlockMultiPlaceEvent
            - Setup for these blocks are the same as single custom blocks, except for the addition of  the tags  "actual-block2"  and  "disguised-block2"
                - See the custom block  "custom-door"  in demo.yml for more details
        - Added a MultiBlockChange packet listener with similar functionality to the existing BlockChange packet listener
        - Added an error message when a duplicate custom block ID definition is detected
        - Custom block definition yaml files are now ONLY loaded on startup and  /woz reload  to increase performance
        - Added a check in BlockChange and MultiBlockChange packets so that blocks will only be disguised if their real BlockData matches the BlockData in the packet