@@ -1,6 +1,7 @@
 1.1.3     _/__/21
     New Features:
-        - Added a debug level 5 for messages that are extremely common will rarely be used for debugging (like a message saying a single block has been loaded)
+        - Added a custom block debug level 5 for messages that are extremely common will rarely be used for debugging (like a message saying a single block has been loaded)
+        - Added the custom block config option  "Global.fix-inverted-multi-blocks"  , which fixes a bug where vertical multi custom blocks would be inverted if placed on a replaceable multi block (tall grass, tall fern, etc)
         - Added the command  "/woz get [item id]"  which gives a player the item specified in the  "item"  section of the custom block's definition
             - The new permission  "worldofzombies.command.get"  has been added for this command
             - This command includes dynamic tab completion based on the active custom blocks from the most recent plugin reload
@@ -20,7 +21,7 @@
         - Improved "item" custom block drop tag to include anything in the Material class
         - Added functionality to calculate which custom blocks will drop items based on the "yield" of explosions
         - Added functionality to calculate custom block drops for blocks that break because from explosions
-            - Added  "options.blast-resistant"  to not break in explosions, and  "options.instant-break"  to break the block instantly when clicked
+            - Added  "options.blast-resistant"  to not break in explosions,  "options.instant-break"  to break the block instantly when clicked, and more in demo.yml  "demo-block"
         - Added piston event functionality (push and pull)
             - Added  "options.cancel-piston-push"  ,  "options.cancel-piston-pull"  , and  "options.piston-breakable"
         - Added the  "match-states"  section inside the  "block"  section of a block definition which will change the disguised BlockData of a block if its actual BlockData matches all of the nested states
@@ -33,6 +34,7 @@
                 - These only apply to the second block in a custom block with a second block, and they roll back to the section without a "2" if this variant does not exist
 
     Changes:
+        - Renamed the custom block config option  "Global.packet-send-delay"  to  "Global.chunk-load-delay"
         - Changed structure of all logged blocks (blocks will not auto update)
             - Custom block id is now stored in the tag  "[location].id"  , and the latest disguised-data is stored in the tag  "[location].disguised-block"
             - The new tag  "chunk-reload-id"  is how the plugin determines if it should recalculate blocks'  "[location].disguised-block"  when a chunk is loaded, so don't change it unless you want that data to be recalculated
